app/assets/stylesheets/manager/projects.scss
@import "variables";
@import "mixins/date_fields";
@import "mixins/form";
@import "mixins/controls";
@import "mixins/summary";

@include controls;

.manager {
  .container {
    display: flex;
    margin: 0 auto;
    max-width: 1300px;

    @include summary;

    .content {
      padding: 3.5rem 3.5rem 0rem 3.5rem;

      .project-summary-box {
        background-color: $light-gray;
        border: 1px solid $dark-bluegray;
        margin-bottom: 3rem;
        padding: 1.25rem;

        .info-block {
          display: flex;
          margin-bottom: 12px;
          p {
            margin: 0.5rem 0px;
          }

          .title {
            font-weight: $semi-bold;
          }

          .w-200 {
            width: 200px;
          }
        }
        .info-block:last-child {
          margin: 0rem;
        }
      }

      ul.project-menu-bar {
        border-bottom: 1px solid $dark-bluegray;
        display: flex;
        list-style: none;
        margin: 0px;
        padding: 0px;

        li {
          display: flex;
          margin-right: 2.5rem;

          a.nav-link {
            color: $dark-bluegray;
            display: inline-block;
            font-weight: $semi-bold;
            padding-bottom: 0.25rem;
            text-decoration: none;

            &.active {
              border-bottom: 6px solid $sky-blue;
              color: $navy-blue;
              font-weight: $semi-bold;
            }
          }
        }
      }

      .project-form {
        margin-bottom: 0rem;
        padding: 0rem;
      }

      .team_memberships-index {
        margin-bottom: 0rem;

        section {
          padding: 0rem 3rem;
        }
        section:last-child {
          margin-bottom: 0rem;
          padding: 1.5rem;
        }
      }

      .controls {
        margin-bottom: 0rem;
        padding: 1.5rem;
      }

      .fundings-index {
        margin-bottom: 0rem;
        section {
          padding: 3rem;
        }
        section:last-child {
          margin-bottom: 0rem;
          padding: 1.5rem;
        }
      }
    }

    .content.full {
      display: block;
    }
  }
}

.manager.projects-index {
  section.content {
    header{
      h1 {
        font-size: 1.85rem;
        font-weight: $medium;
        margin: .5rem 0;
      }

      hr {
        border-bottom: 2px solid $gray;
        border-left: 0;
        border-right: 0;
        border-top: 0;
        margin: 0;
      }

      .search-primary, .search-secondary {
        background-color: $light-light-blue;
        color: $navy-blue;
        padding: 1.5rem;
      }

      .search-primary {
        display: flex;
        justify-content: space-between;
      }

      .search-primary > div:first-child > * {
        margin-right: .5rem;
      }

      .search-primary > div:last-child > * {
        margin-left: .5rem;
      }
      
      .search-secondary {
        background-color: $light-light-blue;
        border-top: 1px solid $gray;
        display: none;
      }

      .search-secondary.show {
        display: block;
      }

      #show_button, #hide_button {
        display: none;
      }

      #show_button.show, #hide_button.show {
        box-sizing: border-box;
        display: flex;
        height: 100%
      }

      input {
        border: 1px solid $gray;
        border-radius: .3125rem;
        box-sizing: border-box;
        padding: .5rem;
      }

      select {
        background-color: $white;
        border: 1px solid $gray;
        border-radius: .3125rem;
        box-sizing: border-box;
        padding: .5rem;
      }

      .input-with-buttons {
        position: relative;
    
        > input {
          padding: 0.5rem 1.875rem;
        }
      }

      .input-with-buttons::before {
        content: "";
        display: block;
        height: 1rem;
        left: 0.725rem;
        position: absolute;
        top: 0.5875rem;
        width: 1rem;
      }
    
      .input-with-buttons.search::before {
        background: no-repeat center/12px url(asset-path("icon-search.svg"));
      }

      .input-with-buttons.calendar::before {
        background: no-repeat center/14px url(asset-path("icon-calendar.svg"));
      }
    }

    nav.pagination {
      display: flex;
      font-size: 0.75rem;
      justify-content: flex-end;
    
      span {
        color: $navy-blue;
        font-weight: $bold;
        padding: 0.313rem;
    
        a, a:visited {
          color: $navy-blue;
        }
      }
    }
  }

  .row {
    display: flex;
    margin-bottom: 1rem;

    label {
      color: $dark-bluegray;
      display: inline-block;
      font-size: 0.75rem;
      font-weight: $medium;
      margin-bottom: 0.15rem;
    }
  }

  .row-medium, .row-auto {
    padding-right: 1rem;

    > * {
      width: 100%;
    }
  }

  .row-medium {
    width: 423px;
  }
}

